--- a/src/components/EfectosPage/EfectosPage.css
+++ b/src/components/EfectosPage/EfectosPage.css
@@ -335,3 +335,23 @@ body {
 .t-10 {
     padding-left: 18%;
 }
+
+.shadows {
+    box-shadow: -3px 3px 5px rgb(153, 153, 153, 0.7);
+}
+
+.contenerdor-btn:hover .boton-emergente {
+    transform: translateY(-85%);
+    visibility: visible;
+    opacity: 100;
+} 
+
+.pricing .cards:hover {
+    margin-top: -.25rem;
+    margin-bottom: .25rem;
+    box-shadow: 0 0.5rem 1rem 0 rgba(255, 255, 255, 0.4);
+}
+
+.language-css:hover {
+    background-color: #ffffff00;
+}
