--- a/src/components/FormsPage/FormsPage.css
+++ b/src/components/FormsPage/FormsPage.css
@@ -5,18 +5,19 @@
     border-radius: 25px;
     width: 150px;
     color: #ffff;
-}
-
-.btn-primary:hover {
+  
+  }
+  
+  .btn-primary:hover {
     background-color: #0b244b;
     color: var(--color-blanco);
     border-color: #0b244b;
     border-radius: 25px;
     color: #ffff;
-}
-
-.formulario {
-    width: 460px;
+  }
+  
+  .formulario {
+    width: 280px;
     outline: none;
     height: 44px;
     bottom: 14px;
@@ -26,16 +27,33 @@
     box-sizing: border-box;
     padding: 0 18px;
     background-color: #def;
-}
-
-.formulario:hover {
+    border: 0px;
+    box-shadow: 0px 3px 0px 0px black;
+  }
+  
+  .icon {
+    width: 50px;
+    box-shadow: 0px 3px 0px 0px black;
+    height: 44px;
+    bottom: 14px;
+    border-radius: 22px;
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 0 18px;
+    background-color: #def;
+    color: #073379;
+  
+  }
+  
+  .formulario:hover {
     background-color: #ffff;
-}
-
-textarea {
+  }
+  
+  pre {
     background-color: cornsilk;
-}
-
-textarea:hover {
+  }
+  
+  code:hover {
     background-color: #ffff;
-}
+  }
