--- a/src/components/FormsPage/FormsPage.css
+++ b/src/components/FormsPage/FormsPage.css
@@ -7,7 +7,9 @@
   color: #ffff;
 
 }
-
+.texto_centrado{
+  text-align:center;
+}
 .btn-primary:hover {
   background-color: #0b244b;
   color: var(--color-blanco);
@@ -17,7 +19,7 @@
 }
 
 .formulario {
-  width: 280px;
+  width: 300px;
   outline: none;
   height: 44px;
   bottom: 14px;
@@ -32,6 +34,7 @@
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
   box-sizing: border-box;         /* Opera/IE 8+ */
+  
 }
 
 .icon {
@@ -49,7 +52,7 @@
   padding: 0 18px;
   background-color: #def;
   color: #073379;
-
+  
 }
 
 .formulario:hover {
@@ -58,8 +61,64 @@
 
 pre {
   background-color: cornsilk;
+  color: black;
 }
 
 code:hover {
   background-color: #ffff;
 }
+
+@media (max-width:360px){
+
+  
+  .formulario {
+    width: 150px;
+    font-size: 12px;
+    outline: none;
+    height: 44px;
+    bottom: 14px;
+    border-radius: 22px;
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 0 18px;
+    background-color: #def;
+    border: 0px;
+    box-shadow: 0px 3px 0px 0px black;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+    
+  }
+  
+  .icon {
+    width: 40px;
+    box-shadow: 0px 3px 0px 0px black;
+    height: 44px;
+    bottom: 14px;
+    border-radius: 22px;
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+    padding: 0 18px;
+    background-color: #def;
+    color: #073379;
+    
+  }
+  pre {
+    width: 200px;
+    background-color: cornsilk;
+    color: black;
+  }
+  
+  code:hover {
+    background-color: #ffff;
+  }
+
+
+
+}
+
