correccion de estilos de mario

--- a/src/components/FormsPage/FormsPage.css
+++ b/src/components/FormsPage/FormsPage.css
@@ -50,10 +50,10 @@
     background-color: #ffff;
   }
   
-  pre {
+  /* pre {
     background-color: cornsilk;
   }
   
   code:hover {
     background-color: #ffff;
-  }
+  } */
