se empezo a identar forms

--- a/src/components/FormsPage/FormsPage.css
+++ b/src/components/FormsPage/FormsPage.css
@@ -106,3 +106,40 @@
         background-color: #ffff;
     }
 }
+
+
+.t-2 {
+    padding-left: 2%;
+}
+
+.t-3 {
+    padding-left: 4%;
+}
+
+.t-4 {
+    padding-left: 6%;
+}
+
+.t-5 {
+    padding-left: 8%;
+}
+
+.t-6 {
+    padding-left: 10%;
+}
+
+.t-7 {
+    padding-left: 12%;
+}
+
+.t-8 {
+    padding-left: 14%;
+}
+
+.t-9 {
+    padding-left: 16%;
+}
+
+.t-10 {
+    padding-left: 18%;
+}
